# selfhosting

./: .editorconfig  .gitmodules  README.md  inventory.yaml  k8s-dependencies.yaml  master.yaml  pyproject.toml  setup.sh
media/: readme.md
monitoring/: kustomization.yaml  readme.md
starr/: readme.md
starr/manifests/: namespace.yaml
system/: kustomization.yaml
system/manifests/: namespace.yaml  traefik.cluster-role-binding.yaml  traefik.cluster-role.yaml  traefik.dashboard.service.yaml  traefik.deployment.yaml  traefik.web.service.yaml
